--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -110,7 +110,7 @@ header .intro-text .skills ***REMOVED***
 
 @media(min-width:768px) ***REMOVED***
     header .container ***REMOVED***
-        padding-top: 200px;
+        /*padding-top: 50px;*/
         padding-bottom: 100px;
 ***REMOVED***
 
@@ -125,7 +125,7 @@ header .intro-text .skills ***REMOVED***
 
 @media(min-width:768px) ***REMOVED***
     .navbar-fixed-top ***REMOVED***
-        padding: 25px 0;
+        /*padding: 25px 0;*/
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
@@ -139,7 +139,7 @@ header .intro-text .skills ***REMOVED***
 ***REMOVED***
 
     .navbar-fixed-top.navbar-shrink ***REMOVED***
-        padding: 10px 0;
+        /*padding: 10px 0;*/
 ***REMOVED***
 
     .navbar-fixed-top.navbar-shrink .navbar-brand ***REMOVED***
@@ -260,6 +260,15 @@ section.success ***REMOVED***
     transition: all .3s ease-in-out;
 ***REMOVED***
 
+.btn-outline_green ***REMOVED***
+    margin-top: 15px;
+    border: solid 2px #18bc9c;
+    font-size: 20px;
+    color: #18bc9c;
+    background: 0 0;
+    transition: all .3s ease-in-out;
+***REMOVED***
+
 .btn-outline:hover,
 .btn-outline:focus,
 .btn-outline:active,
@@ -267,6 +276,15 @@ section.success ***REMOVED***
     border: solid 2px #fff;
     color: #18bc9c;
     background: #fff;
+***REMOVED***
+
+.btn-outline_green:hover,
+.btn-outline_green:focus,
+.btn-outline_green:active,
+.btn-outline_green.active ***REMOVED***
+    border: solid 2px #18bc9c;
+    color: #fff;
+    background: #18bc9c;
 ***REMOVED***
 
 .floating-label-form-group ***REMOVED***
