--- a/client/layout/homeLayout.html
+++ b/client/layout/homeLayout.html
@@ -32,7 +32,7 @@
 </head>
 
 <template name="homeLayout">
-  {{> yield region='navbar'}}
+  {{> navbar}}
 		  {{> yield}}
 	{{> footer}}
 </template>
