manage events and sponsors

--- a/client/layout/default.html
+++ b/client/layout/default.html
@@ -1,13 +1,13 @@
 <head>
-  
+    <link href="css/freelancer.css" rel="stylesheet">
 </head>
 
 <template name="defaultLayout">
-  ***REMOVED******REMOVED***> yield region='navbar'***REMOVED******REMOVED***
-	<div class="container">
-	  <div clas="row">
-		  ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
-	  </div>
-	</div>
-	***REMOVED******REMOVED***> footer***REMOVED******REMOVED***
+    ***REMOVED******REMOVED***> navbar***REMOVED******REMOVED***
+    <div class="container" style="margin-top: 80px;">
+        <div clas="row">
+          ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
+        </div>
+    </div>
+    ***REMOVED******REMOVED***> footer***REMOVED******REMOVED***
 </template>
