--- a/client/layout/homeLayout.html
+++ b/client/layout/homeLayout.html
@@ -32,7 +32,7 @@
 </head>
 
 <template name="homeLayout">
-  ***REMOVED******REMOVED***> yield region='navbar'***REMOVED******REMOVED***
+  ***REMOVED******REMOVED***> navbar***REMOVED******REMOVED***
 		  ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
 	***REMOVED******REMOVED***> footer***REMOVED******REMOVED***
 </template>
