--- a/client/layout/default.html
+++ b/client/layout/default.html
@@ -4,6 +4,7 @@
 
 <template name="defaultLayout">
     {{> navbar}}
+    {{> notifications}}
     <div class="container" style="margin-top: 80px;">
         <div clas="row">
           {{> yield}}
