--- a/client/layout/navbar.html
+++ b/client/layout/navbar.html
@@ -9,7 +9,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#page-top">SpeedHack.io</a>
+              <a class="navbar-brand" href="/">SpeedHack.io</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
