--- a/client/layout/default.html
+++ b/client/layout/default.html
@@ -4,6 +4,7 @@
 
 <template name="defaultLayout">
     ***REMOVED******REMOVED***> navbar***REMOVED******REMOVED***
+    ***REMOVED******REMOVED***> notifications***REMOVED******REMOVED***
     <div class="container" style="margin-top: 80px;">
         <div clas="row">
           ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
