--- a/client/layout/homeLayout.html
+++ b/client/layout/homeLayout.html
@@ -33,6 +33,7 @@
 
 <template name="homeLayout">
   ***REMOVED******REMOVED***> navbar***REMOVED******REMOVED***
+  ***REMOVED******REMOVED***> notifications***REMOVED******REMOVED***
 		  ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
 	***REMOVED******REMOVED***> footer***REMOVED******REMOVED***
 </template>
