--- a/client/views/events/events.show.html
+++ b/client/views/events/events.show.html
@@ -27,6 +27,16 @@
      ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
     <h2>Going</h2>
     <h2>Leaderboard</h2>
+    <h2>My solutions</h2>
+    ***REMOVED******REMOVED***> mySolutions***REMOVED******REMOVED***
+</template>
+
+<template name="mySolutions">
+    ***REMOVED******REMOVED***> reactiveTable collection=mySolutions showNavigation='always' rowsPerPage=5 showFilter=false settings=settings***REMOVED******REMOVED***
+</template>
+
+<template name="sponsorCell">
+    <img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="" />
 </template>
 
 <template name="addSponsorMenu">
