--- a/client/views/teams/teams.create.html
+++ b/client/views/teams/teams.create.html
@@ -2,7 +2,7 @@
     ***REMOVED******REMOVED***#autoForm collection="Teams" id="insertTeamForm" type="insert"***REMOVED******REMOVED***
      <fieldset>
        <legend>Create a Team</legend>
-       ***REMOVED******REMOVED***> afQuickField name="event_slug" options=eventOptions***REMOVED******REMOVED***
+       ***REMOVED******REMOVED***> afQuickField name="event_slug" options=openEventOptions***REMOVED******REMOVED***
        ***REMOVED******REMOVED***> afQuickField name='name'***REMOVED******REMOVED***
        ***REMOVED******REMOVED***> afQuickField name='table_number'***REMOVED******REMOVED***
        ***REMOVED******REMOVED***> afQuickField name='teammate_1'***REMOVED******REMOVED***
