--- a/client/views/events/events.leaderboard.html
+++ b/client/views/events/events.leaderboard.html
@@ -4,12 +4,12 @@
         ***REMOVED******REMOVED***>leaderboard***REMOVED******REMOVED***
     </div>
     <div class="col-md-6">
-      <h1>Live Stream</h1>
+        ***REMOVED******REMOVED***> livestream***REMOVED******REMOVED***
     </div>
 </template>
 
 <template name="leaderboard">
-<!-- ***REMOVED******REMOVED***> reactiveTable collection=myCollection settings=settings***REMOVED******REMOVED*** -->
+    <h1>Leaderboard</h1>
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -33,6 +33,6 @@
 </template>
 
 <template name="livestream">
-    <h1>Leaderboard</h1>
-
+    <h1>Livestream</h1>
+    ***REMOVED******REMOVED***> reactiveTable collection=solutions settings=settings***REMOVED******REMOVED***
 </template>
