--- a/client/layout/default.html
+++ b/client/layout/default.html
@@ -3,9 +3,10 @@
 </head>
 
 <template name="defaultLayout">
+    <link href="css/freelancer.css" rel="stylesheet">
     ***REMOVED******REMOVED***> navbar***REMOVED******REMOVED***
     ***REMOVED******REMOVED***> notifications***REMOVED******REMOVED***
-    <div class="container" style="margin-top: 80px;">
+    <div class="container" style="margin-top: 80px;margin-bottom: 200px;">
         <div clas="row">
           ***REMOVED******REMOVED***> yield***REMOVED******REMOVED***
         </div>
