--- a/client/views/events/events.show.html
+++ b/client/views/events/events.show.html
@@ -1,4 +1,5 @@
 <template name="eventShow">
+    <div class="col-md-6">
     <h1>***REMOVED******REMOVED***name***REMOVED******REMOVED***</h1>
     <img src="***REMOVED******REMOVED***image***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** logo" width="200px"/>
     <p>
@@ -25,13 +26,16 @@
            ***REMOVED******REMOVED***> removeSponsorMenu***REMOVED******REMOVED***
         ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
      ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
-    <h2>Going</h2>
-    <h2>My solutions</h2>
-    ***REMOVED******REMOVED***> mySolutions***REMOVED******REMOVED***
+    <h2>Participants</h2>
+</div>
+    <div class="col-md-6">
+        <h2>My solutions</h2>
+        ***REMOVED******REMOVED***> mySolutions***REMOVED******REMOVED***
+    </div>
 </template>
 
 <template name="mySolutions">
-    ***REMOVED******REMOVED***> reactiveTable collection=mySolutions showNavigation='always' rowsPerPage=5 showFilter=false settings=settings***REMOVED******REMOVED***
+    ***REMOVED******REMOVED***> reactiveTable collection=mySolutions showNavigation='never' showFilter=false settings=settings***REMOVED******REMOVED***
 </template>
 
 <template name="sponsorCell">
