event edit+ design

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -25,26 +25,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#chicagoModal" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
+                ***REMOVED******REMOVED***#each speedhackEvents***REMOVED******REMOVED***
+                    <div class="col-sm-4 portfolio-item">
+                        <a href="***REMOVED******REMOVED***pathFor 'event.show' slug ***REMOVED******REMOVED***" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                </div>
                             </div>
-                        </div>
-                        <img src="img/portfolio/chicago.png" class="img-responsive" alt=""/>
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#parisModal" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/paris.png" class="img-responsive" alt="">
-                    </a>
-                </div>
+                            <img src="***REMOVED******REMOVED***image***REMOVED******REMOVED***" class="img-responsive" alt=""/>
+                        </a>
+                    </div>
+                ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
                 <div class="col-sm-4 portfolio-item">
                     <a href="#yourCityModal" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -240,7 +232,7 @@
                           <script>
                           (function()***REMOVED***var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id))***REMOVED***js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)***REMOVED***id=id+'_';if(!gi.call(d,id))***REMOVED***qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)***REMOVED******REMOVED***)()
                           </script>
-                          <br />  <br />w
+                          <br />  <br />
                           <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                       </div>
                   </div>
