--- a/client/views/events/events.create.html
+++ b/client/views/events/events.create.html
@@ -6,6 +6,7 @@
         ***REMOVED******REMOVED***> afQuickField name='name'***REMOVED******REMOVED***
         ***REMOVED******REMOVED***> afQuickField name='brief' rows=6***REMOVED******REMOVED***
         ***REMOVED******REMOVED***> afQuickField name='image'***REMOVED******REMOVED***
+        ***REMOVED******REMOVED***> afQuickField name='tickets_url'***REMOVED******REMOVED***
         ***REMOVED******REMOVED***> afQuickField name='venue'***REMOVED******REMOVED***
         ***REMOVED******REMOVED***> afFormGroup name='startDate' type="datetime-local"***REMOVED******REMOVED***
         ***REMOVED******REMOVED***> afFormGroup name='endDate' type="datetime-local"***REMOVED******REMOVED***
