--- a/client/views/events/events.show.html
+++ b/client/views/events/events.show.html
@@ -1,36 +1,57 @@
 <template name="eventShow">
-    <div class="col-md-6">
-    <h1>***REMOVED******REMOVED***name***REMOVED******REMOVED***</h1>
-    <img src="***REMOVED******REMOVED***image***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** logo" width="200px"/>
-    <p>
-        ***REMOVED******REMOVED***brief***REMOVED******REMOVED***
-    </p>
-    <p>
-        Where:
-    </p>
-    <p>
-        When:
-    </p>
-    <p>
-        Tickets:
-    </p>
-    <h2>Sponsors
+    <div class="col-md-8">
         ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
-           ***REMOVED******REMOVED***> addSponsorMenu***REMOVED******REMOVED***
+           <a class="btn btn-primary" href="***REMOVED******REMOVED***pathFor route='event.edit'***REMOVED******REMOVED***"><i class="fa fa-pencil"></i> edit</a>
         ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
-    </h2>
-
-     ***REMOVED******REMOVED***#each sponsors***REMOVED******REMOVED***
-        <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo" width="100px"/></a>
-        ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
-           ***REMOVED******REMOVED***> removeSponsorMenu***REMOVED******REMOVED***
-        ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
-     ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
-    <h2>Participants</h2>
-</div>
-    <div class="col-md-6">
+        <h1>***REMOVED******REMOVED***name***REMOVED******REMOVED***</h1>
+        <hr class="star-primary">
+        <img src="***REMOVED******REMOVED***image***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** logo" width="200px"/>
+        <p>
+            ***REMOVED******REMOVED******REMOVED***brief***REMOVED******REMOVED******REMOVED***
+        </p>
+        ***REMOVED******REMOVED***> whereWhen***REMOVED******REMOVED***
+        ***REMOVED******REMOVED***> sponsorsSection***REMOVED******REMOVED***
+    </div>
+    <div class="col-md-4">
+        ***REMOVED******REMOVED***#if mySolutions***REMOVED******REMOVED***
         <h2>My solutions</h2>
         ***REMOVED******REMOVED***> mySolutions***REMOVED******REMOVED***
+        ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
+    </div>
+</template>
+
+<template name="sponsorsSection">
+    <div class="row">
+        <h2>Sponsors
+            ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
+               ***REMOVED******REMOVED***> addSponsorMenu***REMOVED******REMOVED***
+            ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
+        </h2>
+
+         ***REMOVED******REMOVED***#each sponsors***REMOVED******REMOVED***
+            <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo" width="100px"/></a>
+            ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
+               ***REMOVED******REMOVED***> removeSponsorMenu***REMOVED******REMOVED***
+            ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
+         ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
+    </div>
+</template>
+
+<template name="whereWhen">
+    <div class = "row">
+            <div class="col-md-8 well">
+                <p>
+                    <i class="fa fa-map-marker"></i> ***REMOVED******REMOVED***venue.name***REMOVED******REMOVED*** in <b>***REMOVED******REMOVED***venue.city***REMOVED******REMOVED***</b> at <i>***REMOVED******REMOVED***venue.address***REMOVED******REMOVED***</i> <a href="http://maps.google.com/?q=***REMOVED******REMOVED***venue.name***REMOVED******REMOVED***+***REMOVED******REMOVED***venue.city***REMOVED******REMOVED***"> map <i class="fa fa-external-link"></i></a>
+                </p>
+                <p>
+                    <i class="glyphicon glyphicon-time"></i> On ***REMOVED******REMOVED***displayDay startDate***REMOVED******REMOVED*** from ***REMOVED******REMOVED***displayHours startDate***REMOVED******REMOVED*** to ***REMOVED******REMOVED***displayHours endDate***REMOVED******REMOVED***
+                </p>
+                ***REMOVED******REMOVED***#if tickets_url***REMOVED******REMOVED***
+                <p>
+                    <i class="fa fa-ticket"></i> Tickets: <a href="***REMOVED******REMOVED***tickets_url***REMOVED******REMOVED***">Register</a>
+                </p>
+                ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
+            </div>
     </div>
 </template>
 
