event edit+ design

--- a/client/views/events/events.create.html
+++ b/client/views/events/events.create.html
@@ -6,6 +6,7 @@
         {{> afQuickField name='name'}}
         {{> afQuickField name='brief' rows=6}}
         {{> afQuickField name='image'}}
+        {{> afQuickField name='tickets_url'}}
         {{> afQuickField name='venue'}}
         {{> afFormGroup name='startDate' type="datetime-local"}}
         {{> afFormGroup name='endDate' type="datetime-local"}}
