--- a/client/layout/footer.html
+++ b/client/layout/footer.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        brought to you by <a href="http://3scale.net">3scale &nbsp;<img height="50" src="/img/3scale_logo_white.png" /></a>
+                        brought to you by <a href="http://3scale.net">3scale &nbsp;<img height="50" src="/img/3scale_logo_white.png" /></a><br/> &nbsp;kindly hosted by  &nbsp;<a href="http://appsdeck.eu"><img height="50" src="/img/Logo_Appsdeck.svg" /></a>
                     </div>
                 </div>
             </div>
