--- a/client/layout/navbar.html
+++ b/client/layout/navbar.html
@@ -18,15 +18,11 @@
                   <li class="hidden">
                       <a href="#page-top"></a>
                   </li>
-                  <li class="page-scroll">
-                      <a href="#portfolio">Where</a>
-                  </li>
-                  <li class="page-scroll">
-                      <a href="#about">About</a>
-                  </li>
-                  <li class="page-scroll">
-                      <a href="#contact">Contact</a>
-                  </li>
+                  {{#if currentUser}}
+                      {{> userMenu}}
+                    {{else}}
+                      {{>navMenu}}
+                  {{/if}}
                   <li>{{> loginButtons}}</li>
               </ul>
           </div>
@@ -34,4 +30,28 @@
       </div>
       <!-- /.container-fluid -->
   </nav>
+</template>
+
+<template name="navMenu">
+    <li class="page-scroll">
+        <a href="#portfolio">Where</a>
+    </li>
+    <li class="page-scroll">
+        <a href="#about">About</a>
+    </li>
+    <li class="page-scroll">
+        <a href="#contact">Contact</a>
+    </li>
+</template>
+
+<template name="userMenu">
+    <li class="page-scroll">
+        <a href="{{pathFor 'team.create'}}">Create Team</a>
+    </li>
+    <li class="page-scroll">
+        <a href="{{pathFor 'solutions.new'}}">New Solution</a>
+    </li>
+    <li class="page-scroll">
+        <a href="#contact">My Profile</a>
+    </li>
 </template>
