give extra points to team, store extra points on team and store sponsor points

--- a/client/views/admin/admin.main.html
+++ b/client/views/admin/admin.main.html
@@ -1,9 +1,23 @@
 <template name="adminMain">
     <h1>Admin</h1>
     ***REMOVED******REMOVED***> addRoleToUserSection***REMOVED******REMOVED***
+    ***REMOVED******REMOVED***> extraPoints***REMOVED******REMOVED***
     ***REMOVED******REMOVED***> manageUsers***REMOVED******REMOVED***
     ***REMOVED******REMOVED***> manageTeams***REMOVED******REMOVED***
     ***REMOVED******REMOVED***> manageSolutions***REMOVED******REMOVED***
+</template>
+
+<template name="extraPoints">
+    <h2>Give extra points</h2>
+    team: <input type="text" name="team" id="team">
+    <select id="extraChallenges" name="extraChallenges">
+		<option></option>
+		<option value=2>Best Costume</option>
+		<option value=1>Most original team name</option>
+		<option value=2>API song</option>
+		<option value=2>All Challenges</option>
+    </select>
+    <button name="button" type="submit" class="btn btn-primary">Give  Points</button>
 </template>
 
 <template name="addRoleToUserSection">
