show user collection on houston

--- a/client/views/admin/admin.main.html
+++ b/client/views/admin/admin.main.html
@@ -1,4 +1,4 @@
-<template name="adminMain">
+<template name="backendMain">
     <h1>Admin</h1>
     {{> addRoleToUserSection}}
     {{> extraPoints}}
