--- a/client/views/solutions/solutions.new.html
+++ b/client/views/solutions/solutions.new.html
@@ -4,12 +4,18 @@
 </template>
 
 <template name="newSolutionForm">
-    ***REMOVED******REMOVED***#autoForm collection="Solutions" id="insertSolutionForm" type="insert"***REMOVED******REMOVED***
-     <fieldset>
-       <legend>Submit your solution</legend>
-       ***REMOVED******REMOVED***> afQuickField name="event_slug" id="event_select" options=openEventOptions***REMOVED******REMOVED***
-       ***REMOVED******REMOVED***> afQuickField name='sponsor' options=sponsorOptions***REMOVED******REMOVED***
-     </fieldset>
-     <button type="submit" class="btn btn-primary">Submit</button>
- ***REMOVED******REMOVED***/autoForm***REMOVED******REMOVED***
+    ***REMOVED******REMOVED***#if  openEventOptions ***REMOVED******REMOVED***
+        ***REMOVED******REMOVED***#autoForm collection="Solutions" id="insertSolutionForm" type="insert"***REMOVED******REMOVED***
+            <fieldset>
+            <legend>Submit your solution</legend>
+            ***REMOVED******REMOVED***> afQuickField name="event_slug" id="event_select" options=openEventOptions***REMOVED******REMOVED***
+            ***REMOVED******REMOVED***> afQuickField name='sponsor' options=sponsorOptions***REMOVED******REMOVED***
+            </fieldset>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        ***REMOVED******REMOVED***/autoForm***REMOVED******REMOVED***
+     ***REMOVED******REMOVED***else***REMOVED******REMOVED***
+        <div class="alert alert-warning" role="alert">
+            No SpeedHack currently running, come back later.
+        </div>
+    ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
 </template>
