--- a/client/views/teams/teams.create.html
+++ b/client/views/teams/teams.create.html
@@ -1,13 +1,19 @@
 <template name="newTeam">
-    {{#autoForm collection="Teams" id="insertTeamForm" type="insert"}}
-     <fieldset>
-       <legend>Create a Team</legend>
-       {{> afQuickField name="event_slug" options=openEventOptions}}
-       {{> afQuickField name='name'}}
-       {{> afQuickField name='table_number'}}
-       {{> afQuickField name='teammate_1'}}
-       {{> afQuickField name='teammate_2'}}
-     </fieldset>
-     <button type="submit" class="btn btn-primary">Create</button>
- {{/autoForm}}
+    {{#if  openEventOptions }}
+        {{#autoForm collection="Teams" id="insertTeamForm" type="insert"}}
+            <fieldset>
+            <legend>Create a Team</legend>
+            {{> afQuickField name="event_slug" options=openEventOptions}}
+            {{> afQuickField name='name'}}
+            {{> afQuickField name='table_number'}}
+            {{> afQuickField name='teammate_1'}}
+            {{> afQuickField name='teammate_2'}}
+            </fieldset>
+            <button type="submit" class="btn btn-primary">Create</button>
+        {{/autoForm}}
+     {{else}}
+        <div class="alert alert-warning" role="alert">
+            No SpeedHack currently running, come back later.
+        </div>
+    {{/if}}
 </template>
