--- a/client/views/admin/admin.main.html
+++ b/client/views/admin/admin.main.html
@@ -22,6 +22,9 @@
 
 <template name="addRoleToUserSection">
     <h2>Add role</h2>
+    <p>
+        <small>ex: judge_twilio</small>
+    </p>
     username: <input type="text" name="username" id="username">
     role: <input type="role" name="role" id="role">
     <button name="button" type="submit" class="btn btn-primary">Add Role</button>
