--- a/client/views/events/events.show.html
+++ b/client/views/events/events.show.html
@@ -3,11 +3,14 @@
         ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
            <a class="btn btn-primary" href="***REMOVED******REMOVED***pathFor route='event.edit'***REMOVED******REMOVED***"><i class="fa fa-pencil"></i> edit</a>
         ***REMOVED******REMOVED***/if***REMOVED******REMOVED***
-        <h1>***REMOVED******REMOVED***name***REMOVED******REMOVED***</h1>
+        <h1>***REMOVED******REMOVED***name***REMOVED******REMOVED*** </h1>
         <hr class="star-primary">
         <img src="***REMOVED******REMOVED***image***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** logo" width="200px"/>
         <p>
             ***REMOVED******REMOVED******REMOVED***brief***REMOVED******REMOVED******REMOVED***
+        </p>
+        <p>
+            <a class="btn btn-primary" href="***REMOVED******REMOVED***pathFor route='event.leaderboard'***REMOVED******REMOVED***"><i class="glyphicon glyphicon-tower"></i> Leaderboard</a>
         </p>
         ***REMOVED******REMOVED***> whereWhen***REMOVED******REMOVED***
         ***REMOVED******REMOVED***> sponsorsSection***REMOVED******REMOVED***
