add partners on main page

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -89,6 +89,23 @@
         </div>
     </section>
 
+    <!--Partners -->
+    <section class="partners" id="partners">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Partners</h2>
+                    <hr class="star-green">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12" style="text-align: center;">
+                    ***REMOVED******REMOVED***> partnersLogo***REMOVED******REMOVED***
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
