--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -37,6 +37,7 @@ h6 {
 }
 
 hr.star-light,
+hr.star-green,
 hr.star-primary {
     margin: 25px auto 30px;
     padding: 0;
@@ -47,6 +48,7 @@ hr.star-primary {
 }
 
 hr.star-light:after,
+hr.star-green:after,
 hr.star-primary:after {
     content: "\f005";
     display: inline-block;
@@ -72,6 +74,15 @@ hr.star-primary {
 
 hr.star-primary:after {
     color: #2c3e50;
+    background-color: #fff;
+}
+
+hr.star-green {
+    border-color: #fff;
+}
+
+hr.star-green:after {
+    color: #18bc9c;
     background-color: #fff;
 }
 
