space between logos

--- a/client/views/partnersLogo.html
+++ b/client/views/partnersLogo.html
@@ -1,5 +1,5 @@
 <template name="partnersLogo">
     {{#each sponsors}}
-        <a href="{{url}}" target="_blank"><img src="{{logo}}" alt="{{name}} sponsor logo" width="200px"/></a>
+        <a href="{{url}}" class="logo-sponsor" target="_blank"><img src="{{logo}}" alt="{{name}} sponsor logo" width="200px"/></a>
     {{/each}}
 </template>
