space between logos

--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -472,3 +472,7 @@ footer .footer-below ***REMOVED***
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 ***REMOVED***
+
+.logo-sponsor ***REMOVED***
+    margin: 10px;
+***REMOVED***
