--- a/client/views/partnersLogo.html
+++ b/client/views/partnersLogo.html
@@ -1,5 +1,5 @@
 <template name="partnersLogo">
     ***REMOVED******REMOVED***#each sponsors***REMOVED******REMOVED***
-        <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo" width="200px"/></a>
+        <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" class="logo-sponsor" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo" width="200px"/></a>
     ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
 </template>
