add faq + sponsor page

--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -94,6 +94,7 @@ header ***REMOVED***
     text-align: center;
     color: #fff;
     background: #18bc9c;
+    height: 550px;
 ***REMOVED***
 
 header .container ***REMOVED***
