--- a/client/views/home.html
+++ b/client/views/home.html
@@ -101,6 +101,23 @@
             <div class="row">
                 <div class="col-lg-12" style="text-align: center;">
                     ***REMOVED******REMOVED***> partnersLogo***REMOVED******REMOVED***
+                    ***REMOVED******REMOVED***>sponsorButton***REMOVED******REMOVED***
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--FAQ -->
+    <section class="success" id="faq">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>FAQ</h2>
+                    <hr class="star-light">
+                </div>
+
+                <div class="col-lg-12 text-center">
+                    ***REMOVED******REMOVED***> faqDetails***REMOVED******REMOVED***
                 </div>
             </div>
         </div>
