--- a/client/views/partnersLogo.html
+++ b/client/views/partnersLogo.html
@@ -3,3 +3,13 @@
         <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" class="logo-sponsor" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo" width="200px"/></a>
     ***REMOVED******REMOVED***/each***REMOVED******REMOVED***
 </template>
+
+<template name="sponsorButton">
+    <div class="row">
+        <div class="col-lg-2 col-lg-offset-5">
+            ***REMOVED******REMOVED***#linkTo route="sponsorshipDetails"***REMOVED******REMOVED***
+            <span class="typeform-share btn btn-lg btn-outline_green" href="https://picsoung.typeform.com/to/EkPqrX" ><i class="fa fa-wrench"></i> Why sponsor SpeedHack?</span>
+            ***REMOVED******REMOVED***/linkTo***REMOVED******REMOVED***
+        </div>
+    </div>
+</template>
