--- a/client/views/partnersLogo.html
+++ b/client/views/partnersLogo.html
@@ -6,7 +6,7 @@
 
 <template name="sponsorButton">
     <div class="row">
-        <div class="col-lg-2 col-lg-offset-5">
+        <div>
             {{#linkTo route="sponsorshipDetails"}}
             <span class="typeform-share btn btn-lg btn-outline_green" href="https://picsoung.typeform.com/to/EkPqrX" ><i class="fa fa-wrench"></i> Why sponsor SpeedHack?</span>
             {{/linkTo}}
